--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -25,7 +25,8 @@ jobs:
     - name: Publish to Docker Hub
       uses: docker/build-push-action@v2     
       with:       
-       username: ${{ secrets.DOCKER_HUB_USERNAME }} 
-       password:  ${{ secrets.DOCKER_HUB_PASSWORD }}
-       repository: frandelgado1000/spring-example   
-       tags: latest
+        context: .
+        username: ${{ secrets.DOCKER_HUB_USERNAME }} 
+        password:  ${{ secrets.DOCKER_HUB_PASSWORD }}
+        repository: frandelgado1000/spring-example   
+        tags: latest
