--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -21,12 +21,15 @@ jobs:
       
     - name: Run build with Gradle Wrapper
       run: ./gradlew build
-
+    - name: Login to DockerHub
+      uses: docker/login-action@v2
+      with:
+        username: ${{ secrets.DOCKER_HUB_USERNAME }}
+        password: ${{ secrets.DOCKER_HUB_PASSWORD }}
     - name: Publish to Docker Hub
       uses: docker/build-push-action@v2     
       with:       
         context: .
-        username: ${{ secrets.DOCKER_HUB_USERNAME }} 
-        password:  ${{ secrets.DOCKER_HUB_PASSWORD }}
+        push: true
         repository: frandelgado1000/spring-example   
         tags: latest
