--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -31,5 +31,4 @@ jobs:
       with:       
         context: .
         push: true
-        repository: frandelgado1000/spring-example   
-        tags: latest
+        tags: frandelgado1000/spring-example:latest
